# LearnEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
app/: CMakeLists.txt  main.cpp
include/: Errors.h  GLSLProgram.h  GLTexture.h  IOManager.h  ImageLoader.h  MainGame.h  Sprite.h  Vertex.h  picoPNG.h
resources/shaders/: colorShading.frag  colorShading.vert
shaders/: colorShading.frag  colorShading.vert
src/: CMakeLists.txt  Errors.cpp  GLSLProgram.cpp  IOManager.cpp  ImageLoader.cpp  MainGame.cpp  Sprite.cpp  Vertex.cpp  picoPNG.cpp
